--- a/package.json
+++ b/package.json
@@ -72,8 +72,9 @@
     "wrappy": "^1.0.2"
   },
   "scripts": {
-  "test": "jest"
+  "test": "echo \"Error: no test specified\" && exit 1"
 }
+
   "keywords": [],
   "author": "",
   "license": "ISC"
